--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
 </head>
 
 <body>
+<div class="star-container">
+  <!-- Example stars with varying sizes and delays -->
+  <div class="star big" style="top: 10%; left: 20%; animation-delay: 0s;"></div>
+  <div class="star medium" style="top: 50%; left: 80%; animation-delay: 1s;"></div>
+  <div class="star large" style="top: 30%; left: 40%; animation-delay: 2s;"></div>
+  <div class="star medium" style="top: 70%; left: 10%; animation-delay: 3s;"></div>
+  <div class="star big" style="top: 90%; left: 60%; animation-delay: 4s;"></div>
+  <div class="star large" style="top: 15%; left: 75%; animation-delay: 0.5s;"></div>
+  <div class="star big" style="top: 40%; left: 25%; animation-delay: 1.5s;"></div>
+  <div class="star large" style="top: 60%; left: 50%; animation-delay: 2.5s;"></div>
+  <div class="star medium" style="top: 80%; left: 35%; animation-delay: 3.5s;"></div>
+  <div class="star big" style="top: 25%; left: 90%; animation-delay: 4.5s;"></div>
+</div>
+
 </body>
 </html>
