--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="star-container">
-  <!-- Example stars with varying sizes and delays -->
+  <!-- Example stars with different sizes and delays -->
   <div class="star big" style="top: 10%; left: 20%; animation-delay: 0s;"></div>
   <div class="star medium" style="top: 50%; left: 80%; animation-delay: 1s;"></div>
   <div class="star large" style="top: 30%; left: 40%; animation-delay: 2s;"></div>
