--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <div class="star-container">
+  <a href="https://ivysul.github.io/website-journal/">
   <div class="star big" style="top: 10%; left: 20%; animation-delay: 0s;"></div>
   <div class="star medium" style="top: 50%; left: 80%; animation-delay: 1s;"></div>
   <div class="star large" style="top: 30%; left: 40%; animation-delay: 2s;"></div>
@@ -17,6 +18,7 @@
   <div class="star large" style="top: 60%; left: 50%; animation-delay: 2.5s;"></div>
   <div class="star medium" style="top: 80%; left: 35%; animation-delay: 3.5s;"></div>
   <div class="star big" style="top: 25%; left: 90%; animation-delay: 4.5s;"></div>
+  </a>
 </div>
 
 </body>
